# Geometry

./: .clang-format  CMakeLists.txt  Makefile  accurate_intersections.hpp  accurate_math.hpp  bsgtree.hpp  cassert.h  cudadef.h  cudatest.cu  cylinders.csg  format_project.sh  genericfp.hpp  genshapes.py  geometry.hpp  hardcylinders.200.csg  hardcylinders.600.csg  hardcylinders.700.csg  hardcylinders.csg  line.hpp  linear.hpp  mathfuncs.hpp  mpreal.hpp  origin.hpp  packedEll.csg  packedEllScaled.csg  point.hpp  polynomial.hpp  quadric_classify.hpp  quadrics.hpp  runTimingPFTest  squarematrix.hpp  test.cpp  test_classification.cpp  test_intersections.cpp  test_line.cpp  test_quadric.cpp  test_vector.cpp  timing_intersections.cpp  typecast.hpp  vector.hpp
include/geometry/: accurate_intersections.hpp  accurate_intersections_approx.hpp  accurate_intersections_incprec.hpp  accurate_intersections_multi.hpp  accurate_intersections_resultant.hpp  accurate_math.hpp  array.hpp  bsgtree.hpp  cudadef.h  genericfp.hpp  line.hpp  mathfuncs.hpp  mpreal.hpp  origin.hpp  point.hpp  polynomial.hpp  quadric.hpp  quadric_classify.hpp  quadrics.hpp  vector.hpp
quadric_scenes/: cylinders.csg  genshapes.py  hardEllipsoids.10.csg  hardEllipsoids.100.csg  hardEllipsoids.1000.csg  hardEllipsoids.200.csg  hardEllipsoids.300.csg  hardEllipsoids.400.csg  hardEllipsoids.500.csg  hardEllipsoids.600.csg  hardEllipsoids.700.csg  hardEllipsoids.800.csg  hardEllipsoids.900.csg  hardEllipsoidsSingle.10.csg  hardEllipsoidsSingle.100.csg  hardEllipsoidsSingle.1000.csg  hardEllipsoidsSingle.200.csg  hardEllipsoidsSingle.300.csg  hardEllipsoidsSingle.400.csg  hardEllipsoidsSingle.500.csg  hardEllipsoidsSingle.600.csg  hardEllipsoidsSingle.700.csg  hardEllipsoidsSingle.800.csg  hardEllipsoidsSingle.900.csg  hardcylinders.10.csg  hardcylinders.100.csg  hardcylinders.1000.csg  hardcylinders.300.csg  hardcylinders.400.csg  hardcylinders.500.csg  hardcylinders.800.csg  hardcylinders.900.csg  packedEll.csg
results/: aggregate.py  analysis.py  analysis.txt
src/cudacompute/: cudacompute.cu
src/cudatest/: cudatest.cu  test_point.cu  test_vector.cu
src/tests/: test.cpp  test_classification.cpp  test_intersections.cpp  test_line.cpp  test_quadric.cpp  test_vector.cpp
src/timing_intersections/: tester.hpp  timing_intersections.cpp
